--- a/package.json
+++ b/package.json
@@ -15,11 +15,16 @@
     "serve-favicon": "~2.2.1"
   },
   "devDependencies": {
+    "assert": "^1.3.0",
     "bootstrap": "^3.3.5",
     "dateformat": "^1.0.11",
     "ejs": "^2.3.1",
     "jquery": "^2.1.4",
+    "mocha": "^2.2.5",
     "moment": "^2.10.3",
-    "pg": "^4.4.0"
+    "pg": "^4.4.0",
+    "should": "^7.0.1",
+    "supertest": "^1.0.1",
+    "winston": "^1.0.0"
   }
 }
