--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "test:unit": "mocha test/*.js"
   },
   "dependencies": {
     "body-parser": "~1.12.4",
@@ -22,6 +22,8 @@
     "jquery": "^2.1.4",
     "mocha": "^2.2.5",
     "moment": "^2.10.3",
+    "mongo": "^0.1.0",
+    "monk": "^1.0.1",
     "pg": "^4.4.0",
     "should": "^7.0.1",
     "supertest": "^1.0.1",
