--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mocha": "^2.2.5",
     "moment": "^2.10.3",
     "mongo": "^0.1.0",
+    "mongoose": "^3.8.23",
     "monk": "^1.0.1",
     "pg": "^4.4.0",
     "should": "^7.0.1",
