--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   "devDependencies": {
     "assert": "^1.3.0",
     "bootstrap": "^3.3.5",
+    "connect-livereload": "^0.5.3",
     "dateformat": "^1.0.11",
     "ejs": "^2.3.1",
+    "gulp-nodemon": "^2.0.3",
     "gulp-react": "^3.0.1",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-watch": "^4.2.4",
@@ -33,6 +35,7 @@
     "react-tools": "^0.13.3",
     "should": "^7.0.1",
     "supertest": "^1.0.1",
+    "tiny-lr": "^0.1.6",
     "winston": "^1.0.0"
   }
 }
