--- a/package.json
+++ b/package.json
@@ -20,16 +20,19 @@
     "connect-livereload": "^0.5.3",
     "dateformat": "^1.0.11",
     "ejs": "^2.3.1",
+    "gulp-less": "^3.0.3",
     "gulp-nodemon": "^2.0.3",
     "gulp-react": "^3.0.1",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-watch": "^4.2.4",
     "jquery": "^2.1.4",
+    "less": "^2.5.1",
     "mocha": "^2.2.5",
     "moment": "^2.10.3",
     "mongo": "^0.1.0",
     "mongoose": "^3.8.23",
     "monk": "^1.0.1",
+    "path": "^0.11.14",
     "pg": "^4.4.0",
     "react": "^0.13.3",
     "react-tools": "^0.13.3",
