--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
     "connect-livereload": "^0.5.3",
     "dateformat": "^1.0.11",
     "ejs": "^2.3.1",
+    "gulp-jscs": "^1.6.0",
+    "gulp-jscs-stylish": "^1.1.0",
+    "gulp-jshint": "^1.11.0",
     "gulp-less": "^3.0.3",
     "gulp-nodemon": "^2.0.3",
     "gulp-react": "^3.0.1",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-watch": "^4.2.4",
     "jquery": "^2.1.4",
+    "jscs": "^1.13.1",
     "less": "^2.5.1",
     "mocha": "^2.2.5",
     "moment": "^2.10.3",
