--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "connect-livereload": "^0.5.3",
     "dateformat": "^1.0.11",
     "ejs": "^2.3.1",
+    "esprima-fb": "^15001.1.0-dev-harmony-fb",
     "gulp-jscs": "^1.6.0",
     "gulp-jscs-stylish": "^1.1.0",
     "gulp-jshint": "^1.11.0",
@@ -31,6 +32,7 @@
     "jquery": "^2.1.4",
     "jscs": "^1.13.1",
     "less": "^2.5.1",
+    "marked": "^0.3.3",
     "mocha": "^2.2.5",
     "moment": "^2.10.3",
     "mongo": "^0.1.0",
