--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-less": "^3.0.3",
     "gulp-nodemon": "^2.0.3",
     "gulp-react": "^3.0.1",
+    "gulp-sass": "^2.2.0",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-watch": "^4.2.4",
     "jquery": "^2.1.4",
