--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-nodemon": "^2.0.3",
     "gulp-react": "^3.0.1",
     "gulp-sass": "^2.2.0",
+    "gulp-scss-lint": "^0.3.9",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-watch": "^4.2.4",
     "jquery": "^2.1.4",
