adds gulp notifz

--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "gulp-jscs-stylish": "^1.1.0",
     "gulp-jshint": "^1.11.0",
     "gulp-less": "^3.0.3",
+    "gulp-livereload": "^3.8.1",
     "gulp-nodemon": "^2.0.3",
+    "gulp-notify": "^2.2.0",
     "gulp-react": "^3.0.1",
     "gulp-sass": "^2.2.0",
     "gulp-scss-lint": "^0.3.9",
