--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "test:unit": "mocha test/*.js"
   },
   "dependencies": {
-    "body-parser": "~1.12.4",
+    "body-parser": "^1.12.4",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.12.4",
     "firebase": "^2.4.0",
     "jade": "~1.9.2",
+    "jsonwebtoken": "^5.7.0",
     "morgan": "~1.5.3",
     "serve-favicon": "~2.2.1"
   },
