--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "lorenc_shop",
   "version": "0.0.0",
+  "authot": "Lorenc Estrefi jlorenc1986",
   "private": true,
   "scripts": {
-    "test:unit": "mocha test/*.js"
+    "test:unit": "mocha test/*.js",
+		"start": "node app.js NODE_ENV=production"
   },
   "dependencies": {
     "body-parser": "^1.12.4",
@@ -18,7 +20,6 @@
   },
   "devDependencies": {
     "assert": "^1.3.0",
-    "bootstrap": "^3.3.5",
     "connect-livereload": "^0.5.3",
     "dateformat": "^1.0.11",
     "ejs": "^2.3.1",
@@ -38,7 +39,6 @@
     "gulp-watch": "^4.2.4",
     "jquery": "^2.1.4",
     "jscs": "^1.13.1",
-    "less": "^2.5.1",
     "marked": "^0.3.3",
     "mocha": "^2.2.5",
     "moment": "^2.10.3",
