--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "connect-livereload": "^0.5.3",
     "dateformat": "^1.0.11",
     "ejs": "^2.3.1",
+    "eslint": "^2.13.1",
+    "eslint-plugin-react": "^5.2.2",
     "esprima-fb": "^15001.1.0-dev-harmony-fb",
     "gulp": "^3.9.0",
     "gulp-jscs": "^1.6.0",
