--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-react": "^5.2.2",
     "esprima-fb": "^15001.1.0-dev-harmony-fb",
     "gulp": "^3.9.0",
+    "gulp-eslint": "^2.0.0",
     "gulp-jscs": "^1.6.0",
     "gulp-jscs-stylish": "^1.1.0",
     "gulp-jshint": "^1.11.0",
