--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "private": true,
   "scripts": {
     "test:unit": "mocha test/*.js",
-    "start": "node app.js"
+    "start": "node app.js",
+    "dev": "node_modules/.bin/gulp develop"
+
   },
   "dependencies": {
     "body-parser": "^1.12.4",
