--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "test": "node_modules/.bin/mocha test/*.js",
     "start": "node app.js",
     "dev": "node_modules/.bin/gulp develop"
-
   },
   "dependencies": {
     "body-parser": "^1.12.4",
@@ -22,6 +21,7 @@
   },
   "devDependencies": {
     "assert": "^1.3.0",
+    "chai": "^3.5.0",
     "connect-livereload": "^0.5.3",
     "dateformat": "^1.0.11",
     "ejs": "^2.3.1",
@@ -56,6 +56,7 @@
     "react": "^0.13.3",
     "react-tools": "^0.13.3",
     "should": "^7.0.1",
+    "sinon": "^1.17.4",
     "supertest": "^1.0.1",
     "tiny-lr": "^0.1.6",
     "winston": "^1.0.0"
