--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "sinon": "^1.17.4",
     "supertest": "^1.0.1",
     "tiny-lr": "^0.1.6",
+    "webpack-dev-server": "^1.14.1",
     "winston": "^1.0.0"
   }
 }
