adds precommit check

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint": "^2.13.1",
     "eslint-plugin-react": "^5.2.2",
     "esprima-fb": "^15001.1.0-dev-harmony-fb",
+    "git-guppy": "^1.2.1",
     "gulp": "^3.9.0",
     "gulp-eslint": "^2.0.0",
     "gulp-jscs": "^1.6.0",
@@ -34,6 +35,7 @@
     "gulp-jshint": "^1.11.0",
     "gulp-less": "^3.0.3",
     "gulp-livereload": "^3.8.1",
+    "gulp-mocha": "^2.2.0",
     "gulp-nodemon": "^2.0.3",
     "gulp-notify": "^2.2.0",
     "gulp-react": "^3.0.1",
@@ -41,6 +43,7 @@
     "gulp-scss-lint": "^0.3.9",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-watch": "^4.2.4",
+    "guppy-pre-commit": "^0.3.0",
     "jquery": "^2.1.4",
     "jscs": "^1.13.1",
     "jsdom": "^8.1.0",
