--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "private": false,
   "scripts": {
     "test": "NODE_ENV=test node_modules/.bin/mocha test/*.js",
-    "start": "node app.js",
-    "dev": "node_modules/.bin/gulp develop",
+    "start": "NODE_ENV=production node app.js",
+    "dev": "NODE_ENV=development node_modules/.bin/gulp develop",
     "env": "env"
   },
   "dependencies": {
