--- a/package.json
+++ b/package.json
@@ -7,27 +7,35 @@
     "test": "NODE_ENV=test node_modules/.bin/mocha test/*.js",
     "start": "NODE_ENV=production node app.js",
     "dev": "NODE_ENV=development node_modules/.bin/gulp develop",
-    "env": "env"
+    "dev-watch": "NODE_ENV=development node_modules/.bin/gulp watch",
+    "env": "env",
+    "build-dev": "NODE_ENV=development node_modules/.bin/gulp build-dev"
   },
   "dependencies": {
+    "backbone.marionette": "^2.4.7",
     "body-parser": "^1.12.4",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.12.4",
+    "jquery": "^2.2.4",
     "morgan": "~1.5.3",
-    "serve-favicon": "~2.2.1"
+    "requirejs": "^2.2.0",
+    "serve-favicon": "~2.2.1",
+    "text": "github:requirejs/text"
   },
   "devDependencies": {
     "assert": "^1.3.0",
     "chai": "^3.5.0",
     "connect-livereload": "^0.5.3",
     "dateformat": "^1.0.11",
+    "del": "^2.2.1",
     "ejs": "^2.3.1",
     "eslint": "^2.13.1",
     "eslint-plugin-react": "^5.2.2",
     "esprima-fb": "^15001.1.0-dev-harmony-fb",
     "git-guppy": "^1.2.1",
-    "gulp": "^3.9.0",
+    "gulp": "^3.9.1",
+    "gulp-connect": "^4.2.0",
     "gulp-eslint": "^2.0.0",
     "gulp-jscs": "^1.6.0",
     "gulp-jscs-stylish": "^1.1.0",
@@ -38,9 +46,11 @@
     "gulp-nodemon": "^2.0.3",
     "gulp-notify": "^2.2.0",
     "gulp-react": "^3.0.1",
+    "gulp-requirejs-optimizer": "^0.9.8",
     "gulp-sass": "^2.2.0",
     "gulp-scss-lint": "^0.3.9",
-    "gulp-sourcemaps": "^1.5.2",
+    "gulp-shell": "^0.5.2",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-watch": "^4.2.4",
     "guppy-pre-commit": "^0.3.0",
     "jquery": "^2.1.4",
@@ -60,6 +70,7 @@
     "sinon": "^1.17.4",
     "supertest": "^1.0.1",
     "tiny-lr": "^0.1.6",
+    "vinyl-paths": "^2.1.0",
     "winston": "^1.0.0"
   }
 }
