--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "NODE_ENV=test node_modules/.bin/mocha test/*.js",
     "start": "NODE_ENV=production node app.js",
     "dev": "NODE_ENV=development node_modules/.bin/gulp develop",
-    "env": "env"
+    "env": "env",
+    "build": "node_modules/.bin/r.js --help"
   },
   "dependencies": {
     "body-parser": "^1.12.4",
