--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "NODE_ENV=test node_modules/.bin/mocha test/*.js",
     "start": "NODE_ENV=production node app.js",
-    "dev": "NODE_ENV=development node_modules/.bin/gulp develop",
+    "dev": "NODE_ENV=development node_modules/.bin/gulp default",
     "env": "env",
     "build": "node_modules/.bin/r.js --help",
     "dev-watch": "NODE_ENV=development node_modules/.bin/gulp watch",
