--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "backbone.marionette": "^2.4.7",
     "body-parser": "^1.12.4",
+    "bootstrap": "^3.3.7",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.12.4",
