--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ejs": "^2.3.1",
     "eslint": "^2.13.1",
     "eslint-plugin-react": "^5.2.2",
+    "eslint-plugin-requirejs": "^3.0.0",
     "esprima-fb": "^15001.1.0-dev-harmony-fb",
     "git-guppy": "^1.2.1",
     "gulp": "^3.9.1",
