--- a/package.json
+++ b/package.json
@@ -74,6 +74,8 @@
     "supertest": "^1.0.1",
     "tiny-lr": "^0.1.6",
     "tooltipster": "^4.1.5",
+    "tsc": "^1.20150623.0",
+    "typings": "^1.4.0",
     "vinyl-paths": "^2.1.0",
     "winston": "^1.0.0"
   }
