--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "NODE_ENV=development node_modules/.bin/gulp default",
     "env": "env",
     "build": "node_modules/.bin/r.js --help",
+    "webpack": "node_modules/.bin/webpack --config webpack.conf.js",
     "clean": "node_modules/.bin/gulp clean",
     "dev-watch": "NODE_ENV=development node_modules/.bin/gulp watch",
     "build-dev": "NODE_ENV=development node_modules/.bin/gulp build-dev"
@@ -71,12 +72,16 @@
     "react-tools": "^0.13.3",
     "should": "^7.0.1",
     "sinon": "^1.17.4",
+    "source-map-loader": "^0.1.5",
     "supertest": "^1.0.1",
     "tiny-lr": "^0.1.6",
     "tooltipster": "^4.1.5",
+    "ts-loader": "^0.8.2",
     "tsc": "^1.20150623.0",
+    "typescript": "^2.0.3",
     "typings": "^1.4.0",
     "vinyl-paths": "^2.1.0",
+    "webpack": "^1.13.2",
     "winston": "^1.0.0"
   }
 }
