--- a/package.json
+++ b/package.json
@@ -1,87 +1,50 @@
 {
   "name": "lorenc_shop",
-  "version": "0.2.33",
+  "version": "1.0.0",
   "authot": "Lorenc Estrefi (jlorenc1986)",
   "private": false,
   "scripts": {
-    "test": "NODE_ENV=test node_modules/.bin/mocha test/*.js",
-    "start": "NODE_ENV=production node app.js",
-    "dev": "NODE_ENV=development node_modules/.bin/gulp default",
-    "env": "env",
-    "build": "node_modules/.bin/r.js --help",
-    "webpack": "node_modules/.bin/webpack --config webpack.conf.js",
-    "clean": "node_modules/.bin/gulp clean",
-    "dev-watch": "NODE_ENV=development node_modules/.bin/gulp watch",
-    "build-dev": "NODE_ENV=development node_modules/.bin/gulp build-dev"
+    "dev": "node app.js",
+    "test": "jest"
   },
   "dependencies": {
-    "backbone.marionette": "^2.4.7",
-    "body-parser": "^1.12.4",
-    "bootstrap": "^3.3.7",
-    "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
-    "express": "~4.12.4",
-    "jquery": "^2.2.4",
-    "morgan": "~1.5.3",
-    "requirejs": "^2.2.0",
-    "serve-favicon": "~2.2.1",
-    "text": "github:requirejs/text"
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "react": "^16.1.1",
+    "react-dom": "^16.1.1"
   },
   "devDependencies": {
-    "assert": "^1.3.0",
-    "chai": "^3.5.0",
-    "connect-livereload": "^0.5.3",
-    "dateformat": "^1.0.11",
-    "del": "^2.2.1",
-    "ejs": "^2.3.1",
-    "eslint": "^2.13.1",
-    "eslint-plugin-react": "^5.2.2",
-    "eslint-plugin-requirejs": "^3.0.0",
-    "esprima-fb": "^15001.1.0-dev-harmony-fb",
-    "git-guppy": "^1.2.1",
-    "gulp": "^3.9.1",
-    "gulp-connect": "^4.2.0",
-    "gulp-eslint": "^2.0.0",
-    "gulp-jscs": "^1.6.0",
-    "gulp-jscs-stylish": "^1.1.0",
-    "gulp-jshint": "^1.11.0",
-    "gulp-less": "^3.0.3",
-    "gulp-livereload": "^3.8.1",
-    "gulp-mocha": "^2.2.0",
-    "gulp-notify": "^2.2.0",
-    "gulp-react": "^3.0.1",
-    "gulp-requirejs-optimizer": "^0.9.8",
-    "gulp-sass": "^2.2.0",
-    "gulp-scss-lint": "^0.3.9",
-    "gulp-shell": "^0.5.2",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-watch": "^4.2.4",
-    "guppy-pre-commit": "^0.3.0",
-    "jquery": "^2.1.4",
-    "jscs": "^1.13.1",
-    "jsdom": "^8.1.0",
-    "marked": "^0.3.3",
-    "mocha": "^2.2.5",
-    "moment": "^2.10.3",
-    "mongo": "^0.1.0",
-    "mongoose": "^3.8.23",
-    "monk": "^1.0.1",
-    "path": "^0.11.14",
-    "pg": "^4.4.0",
-    "react": "^0.13.3",
-    "react-tools": "^0.13.3",
-    "should": "^7.0.1",
-    "sinon": "^1.17.4",
-    "source-map-loader": "^0.1.5",
-    "supertest": "^1.0.1",
-    "tiny-lr": "^0.1.6",
-    "tooltipster": "^4.1.5",
-    "ts-loader": "^0.8.2",
-    "tsc": "^1.20150623.0",
-    "typescript": "^2.0.3",
-    "typings": "^1.4.0",
-    "vinyl-paths": "^2.1.0",
-    "webpack": "^1.13.2",
-    "winston": "^1.0.0"
+    "autoprefixer": "^7.1.6",
+    "babel-eslint": "^8.0.2",
+    "babel-jest": "^21.2.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-react-es2015": "^1.3.0",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "cookie-parser": "^1.4.3",
+    "cross-env": "^5.1.1",
+    "css-loader": "^0.28.7",
+    "enzyme": "^3.2.0",
+    "enzyme-adapter-react-16": "^1.1.0",
+    "express": "^4.16.2",
+    "html-webpack-plugin": "^2.30.1",
+    "jest": "^21.2.1",
+    "jsdom": "^11.4.0",
+    "morgan": "^1.9.0",
+    "path": "^0.12.7",
+    "react-hot-loader": "^3.1.3",
+    "react-transform-hmr": "^1.0.4",
+    "regenerator-runtime": "^0.11.0",
+    "serve-favicon": "^2.4.5",
+    "style-loader": "^0.19.0",
+    "webpack": "^3.8.1",
+    "webpack-dev-middleware": "^1.12.0",
+    "webpack-hot-middleware": "^2.20.0"
+  },
+  "jest": {
+    "setupFiles": [
+      "./setupTests.js"
+    ]
   }
 }
