--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: node_js
 node_js:
-  - "5.2"
+  - "8.3"
 before_script:
   - npm install
+  - npm install -g jest
 script:
   - npm run test
