--- a/package.json
+++ b/package.json
@@ -27,6 +27,11 @@
     "css-loader": "^0.28.7",
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.1.0",
+    "eslint": "^4.11.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.5.1",
     "express": "^4.16.2",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^21.2.1",
