--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "react": "^16.1.1",
-    "react-dom": "^16.1.1"
+    "react-dom": "^16.1.1",
+    "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.6",
