--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
     "babel-core": "^6.26.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
-    "react-router-dom": "^4.2.2"
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-devtools": "^3.4.1",
+    "redux-devtools-dock-monitor": "^1.1.3",
+    "redux-devtools-log-monitor": "^1.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.6",
