--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "redux": "^3.7.2",
     "redux-devtools": "^3.4.1",
     "redux-devtools-dock-monitor": "^1.1.3",
-    "redux-devtools-log-monitor": "^1.4.0"
+    "redux-devtools-log-monitor": "^1.4.0",
+    "redux-thunk-actions": "^1.1.6"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.6",
